Bug 355577 - KIconLoader::global()->theme() returns a nullptr and crashes plasma
Summary: KIconLoader::global()->theme() returns a nullptr and crashes plasma
Status: RESOLVED FIXED
Alias: None
Product: libplasma
Classification: Frameworks and Libraries
Component: libplasma (other bugs)
Version First Reported In: 5.1.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Marco Martin
URL:
Keywords:
: 355845 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-11-19 09:19 UTC by chx1975
Modified: 2016-03-20 23:08 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.17
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description chx1975 2015-11-19 09:19:49 UTC
Please see this backtrace https://bugs.archlinux.org/task/47121?getfile=13578  and this comment https://bugs.archlinux.org/task/47121#comment141101 

Reproducible: Always
Comment 1 G360 2015-11-21 15:30:26 UTC
I can confirm the same issue with SDDM, it crashes in libKF5IconThemes.so since KF 5.16 upgrade.

sddm-greeter[1192]: segfault at 0 ip 00007fc05119a371 sp 00007ffcda5c8910 error 4 in libKF5IconThemes.so.5.16.0[7fc05116c000+3f000]
Comment 2 Umut Yazgan 2015-11-24 00:35:04 UTC
This also affects me. I'm using Arch Linux and I could not start sddm until I downgraded plasma-frameworks package.
Comment 3 Kai Uwe Broulik 2015-11-25 17:18:47 UTC
Git commit 9ccc6293f792bb5a5cae624568c0073a73064b88 by Kai Uwe Broulik.
Committed on 25/11/2015 at 17:17.
Pushed by broulik into branch 'master'.

[IconItem] Don't crash on null KIconLoader theme

REVIEW: 126168
FIXED-IN: 5.17

M  +18   -6    src/declarativeimports/core/iconitem.cpp

http://commits.kde.org/plasma-framework/9ccc6293f792bb5a5cae624568c0073a73064b88
Comment 4 Martin Klapetek 2015-11-26 18:17:06 UTC
*** Bug 355845 has been marked as a duplicate of this bug. ***
Comment 5 G360 2016-03-20 23:08:22 UTC
*** This bug has been confirmed by popular vote. ***