[IconItem] Don't crash on null KIconLoader theme

REVIEW: 126168
BUG: 355577
FIXED-IN: 5.17